crates/biome_cli/tests/snapshots/main_commands_search/search_css_pattern.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome search --language=css '`color: green`' file.css
```

## `file.css`

```css
div {
  color: green;
}
```

# Emitted Messages

```block
file.css:2:5 search ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  2 │     color: green;

```

```block
Searched 1 file in <TIME>. Found 1 match.
```
