crates/biome_cli/tests/snapshots/main_commands_search/search_css_pattern_skips_js_files.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome search --language=css '`color: green`' file.js file.css
```

## `file.css`

```css
div {
  color: green;
}
```

## `file.js`

```js
const a = 'foo';
```

# Emitted Messages

```block
file.css:2:5 search ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  2 │     color: green;

```

```block
Searched 1 file in <TIME>. Found 1 match.
```
