crates/biome_cli/tests/snapshots/main_commands_search/search_js_pattern.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome search '`"foo"`' file.js
```

## `file.js`

```js
const a = 'foo';
```

# Emitted Messages

```block
file.js:1:11 search ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  1 │ const a = 'foo';

```

```block
Searched 1 file in <TIME>. Found 1 match.
```
