crates/biome_cli/tests/snapshots/main_commands_search/search_js_pattern_with_native_field_names.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome search 'JsConditionalExpression(consequent = $cons, alternate = $alt)' file.js
```

## `file.js`

```js
condition ? consequent : alternate;
```

# Emitted Messages

```block
file.js:1:1 search ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  1 │ condition ? consequent : alternate;

```

```block
Searched 1 file in <TIME>. Found 1 match.
```
