crates/biome_cli/tests/snapshots/main_commands_search/search_json_pattern.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome search --language=json '`"test"`' file.json
```

## `file.json`

```json
{
    "name": "test",
    "version": "1.0.0"
}
```

# Emitted Messages

```block
file.json:2:13 search ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  2 │     "name": "test",

```

```block
Searched 1 file in <TIME>. Found 1 match.
```
